2003-08-04 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs: Add support for boolean attributes (yes/no).

2003-08-04 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs: Add method LocalNameOf, to get the local name of a
	string.
	* XslTransformProcessor.cs: Support for setting the XmlResolver.

2003-08-01 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs, XslAttributeSet.cs: Handle attribute set merging

2003-08-01 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XslTransformProcessor.cs: Add EvaluateNumber method.

2003-07-31 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XsltCompiledContext.cs: Implement more functions.

2003-07-31 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs: Add support for key, utility function to parse
	QName's from the XsltContext. Store keys in the CompiledStyle, not
	in the Stylesheet.
	* XslKey.cs: Real implementation
	* XslStylesheet.cs: Move the keys to CompiledStyle.
	* XsltCompiledContext.cs: Implement the key function

2003-07-31 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XsltCompiledContext.cs: Hmm, maybe I should actually *enable*
	the functions ;-). Also wrote current ().

2003-07-31 Ben Maurer  <bmaurer@users.sourceforge.net>

	* XsltCompiledContext.cs: Remove excess conversion stuff. It is
	done in XPath. Add stubs for XSLT functions.

2003-07-31 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs: To resolve a variable you now need to pass the
	processor, so that it can be passed to IsEvaluated. A local will
	only be resolved if it has already been evaluated.
	* XsltCompiledContext.cs: Pass along the processor.
	
2003-07-30 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Compiler.cs, XslTemplate.cs, XslTransformProcessor.cs: Store
	variable values in the XslTransformProcessor.
	* XsltCompiledContext.cs: If the scope is null, don't look there!
	* Debug.cs: New method Assert

2003-07-30 Ben Maurer  <bmaurer@users.sourceforge.net>
